# cpp-assignment-template

./: CMakeLists.txt  README.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml  memcheck.yml
cmake/: MemCheck.cmake
io_tests/: CMakeLists.txt  code_io_tests.cpp
tests/: CMakeLists.txt  demo_tests.cpp
